[project]
name = "badger-dim"
description = "hello"
authors = [{name = "Bahanur Enis", email = "bahanurenis@gmail.com"}]
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
bdim = "app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "python-dotenv"
]
